# omni_pilot

./: .env.example  .gitignore  AGENTS.md  OmniPilot Project Idea.md  PLAN.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run_server.py  test_api_hitl.py  test_api_phase2.py  test_graph.py  upgrades_migration_summary.md
.github/workflows/: ci.yml
backend/: main.py
backend/agents/: browser.py  calendar.py  research.py  supervisor.py
backend/agents/research_crew/: __init__.py  agents.py  crew.py  tasks.py  tools.py
backend/api/: approvals.py  sessions.py  status.py
backend/database/: config.py  crud.py  models.py
backend/middleware/: auth.py
backend/schemas/: agent.py
backend/services/: agent_service.py  browser_service.py  calendar_service.py  logger.py  memory_context.py  memory_service.py  observability_service.py  router_service.py  stream_service.py  worker_service.py
backend/static/: index.html
backend/workflows/: agent_graph.py
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.css  App.tsx  api.ts  index.css  main.tsx  styles.css  types.ts
frontend/src/components/: BriefingViewer.tsx  ChatPanel.tsx  ErrorBoundary.tsx  SessionSidebar.test.tsx  SessionSidebar.tsx  ThemeToggle.tsx
frontend/src/hooks/: useTheme.ts
migrations/: env.py
migrations/versions/: 4274495e4c42_add_vector_memory_tables.py  e4bca9b714ff_add_audit_logs_table.py  fff182224272_initial_tables.py
tests/: conftest.py  test_agent_evaluation.py  test_calendar_service.py
